fix(main): overflow: hidden

--- a/src/global.css
+++ b/src/global.css
@@ -54,6 +54,7 @@ header button:hover {
 main {
   display: flex;
   justify-content: center;
+  overflow: hidden; /* prevents scrollbar issues on sliding transitions */
 }
 
 a,
